# wtx-apis

./: .env-template  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: tests.yaml
.scripts/: integration-tests.sh  internal-tests.sh
assets/mercado_pago/response/notification/: payment_created.json  payment_updated.json
assets/mercado_pago/response/preference/: preference0.json  preference_base.json
assets/olist/: webhook-order-invoice.json  webhook-order-status.json  webhook-product-inventory.json  webhook-product-price.json  webhook-product.json
assets/super_frete/: quote_freight_response.json
src/: blockchain.rs  calendar.rs  carrier.rs  erp.rs  error.rs  exchange.rs  lib.rs  macros.rs  misc.rs  payment_gateway.rs  secret_management.rs  series.rs  test_data.rs  tests.rs  tuple_impls.rs
src/blockchain/: aptos.rs  confirm_transaction_params.rs  ethereum.rs  solana.rs  starknet.rs
src/blockchain/aptos/: integration_tests.rs  pkg.rs
src/blockchain/aptos/pkg/: check_basic_node_health.rs
src/blockchain/ethereum/: access_list.rs  access_list_item.rs  address.rs  block_id.rs  block_number.rs  call_request.rs  contract.rs  decoder.rs  eip712.rs  encoder.rs  integration_tests.rs  misc.rs  packed_seq.rs  pkg.rs  raw_transaction.rs  receipt.rs  signature.rs  sol_int.rs  sol_struct.rs  sol_token.rs  sol_token_seq.rs  sol_ty.rs  transaction.rs  transaction_condition.rs  transaction_request.rs  types.rs  word.rs
src/blockchain/ethereum/contract/: detokenize.rs  options.rs  tokenizable.rs  tokenizable_item.rs  tokenize.rs
src/blockchain/ethereum/pkg/: eth_block_number.rs  eth_block_transaction_count_by_number.rs  eth_call.rs  eth_estimate_gas.rs  eth_get_balance.rs  eth_get_logs.rs  eth_send_transaction.rs
src/blockchain/ethereum/types/: bytes.rs  filter.rs  filter_builder.rs  log.rs  value_or_array.rs
src/blockchain/solana/: account.rs  address_lookup_table_account.rs  block.rs  filter.rs  integration_tests.rs  macros.rs  misc.rs  notification.rs  pkg.rs  program.rs  reward.rs  short_vec.rs  slot_update.rs  transaction.rs
src/blockchain/solana/misc/: pack.rs  sha256_hasher.rs
src/blockchain/solana/pkg/: account_subscription.rs  block_subscription.rs  common.rs  get_account_info.rs  get_balance.rs  get_block.rs  get_block_commitment.rs  get_block_height.rs  get_block_production.rs  get_block_time.rs  get_blocks.rs  get_blocks_with_limit.rs  get_cluster_nodes.rs  get_epoch_info.rs  get_epoch_schedule.rs  get_fee_for_message.rs  get_first_available_block.rs  get_genesis_hash.rs  get_health.rs  get_highest_snapshot_slot.rs  get_identity.rs  get_inflation_governor.rs  get_inflation_rate.rs  get_inflation_reward.rs  get_largest_accounts.rs  get_latest_blockhash.rs  get_leader_schedule.rs  get_max_retransmit_slot.rs  get_max_shred_insert_slot.rs  get_minimum_balance_for_rent_exemption.rs  get_multiple_accounts.rs  get_program_accounts.rs  get_recent_performance_samples.rs  get_recent_prioritization_fees.rs  get_signature_statuses.rs  get_signatures_for_address.rs  get_slot.rs  get_slot_leader.rs  get_slot_leaders.rs  get_stake_activation.rs  (+19 more)
src/blockchain/solana/program/: account_address.rs  address_lookup_table.rs  build_ix_input.rs  bump_allocator.rs  compute_budget.rs  generic_instruction_input.rs  len_bounds.rs  orca_v3.rs  pack_accounts.rs  pack_data.rs  program_error.rs  (+13 more)
src/calendar/: nager_date.rs
src/calendar/nager_date/: integration_tests.rs  pkg.rs
src/carrier/: melhor_envio.rs  super_frete.rs
src/carrier/melhor_envio/: calculate_shipment_request.rs  calculate_shipment_response.rs  insert_cart_request.rs  insert_cart_response.rs  integration_tests.rs  melhor_envio_result.rs  misc.rs  pkg.rs
src/carrier/super_frete/: cancel_order_req.rs  cancel_order_res.rs  integration_tests.rs  misc.rs  packge_format.rs  pkg.rs  quote_freight_req.rs  quote_freight_res.rs  send_freight_req.rs  send_freight_res.rs  super_frete_response.rs  webhook.rs
src/erp/: olist.rs
src/erp/olist/: associated_entity.rs  civil_status.rs  contact_post.rs  contributor.rs  freight_responsibility.rs  gender.rs  info.rs  integration_tests.rs  misc.rs  olist_result.rs  order.rs  order_get.rs  order_post.rs  payment_method.rs  person_ty.rs  pkg.rs  plan.rs  product_webhook.rs  shipment_method.rs  tributary_regime.rs  webhook_product_mapping.rs  webhook_request.rs
src/exchange/: aster.rs  extended.rs  hyperliquid.rs
src/exchange/aster/: deposit_assets.rs  integration_tests.rs  market.rs  message.rs  misc.rs  order.rs  pkg.rs  sign_params.rs  v1_order_get.rs  v1_order_post.rs  web_socket.rs
src/exchange/extended/: asset.rs  balance.rs  endpoint_config.rs  fe_utils.rs  fees.rs  market.rs  misc.rs  order.rs  order_book.rs  pkg.rs  poseidon_hasher.rs  position.rs  price_event.rs  response.rs  rfc6979.rs  sign.rs  starknet_domain.rs  trade.rs  trading_fee.rs
src/exchange/hyperliquid/: action.rs  agent.rs  builder_info.rs  cancel.rs  chain.rs  info_req.rs  integration_tests.rs  misc.rs  order.rs  order_info.rs  payload.rs  pkg.rs  signature.rs  spot_send.rs  spot_user.rs  usd_send.rs  web_socket.rs
src/misc/: concat_array_str.rs  hash.rs  oauth.rs  slice_by_commas.rs  u256.rs  yyyy_mm_dd.rs  yyyy_mm_dd_opt.rs
src/misc/oauth/: client_credentials.rs  refresh_token.rs
src/payment_gateway/: mercado_pago.rs  pagar_me.rs
src/payment_gateway/mercado_pago/: back_urls.rs  chargeback.rs  integration_tests.rs  item.rs  mercado_pago_response.rs  misc.rs  notification.rs  payer.rs  payment.rs  payment_methods.rs  pkg.rs  preference.rs  preference_response.rs  refund.rs  shipments.rs
src/payment_gateway/pagar_me/: address.rs  integration_tests.rs  pagar_me_error.rs  pagar_me_response.rs  phone.rs  pkg.rs
src/secret_management/: vault.rs
src/secret_management/vault/: integration_tests.rs  pair_vector.rs  pkg.rs  vault_response.rs
src/series/: rick_and_morty.rs
src/series/rick_and_morty/: integration_tests.rs  pkg.rs
src/test_data/: json_placeholder.rs
src/test_data/json_placeholder/: integration_tests.rs  pkg.rs
(+165 files in other folders)
