[dependencies]
base64 = { default-features = false, features = ["alloc"], optional = true, version = "0.22" }
bincode = { default-features = false, optional = true, version = "1.0" }
bs58 = { default-features = false, features = ["alloc"], optional = true, version = "0.5" }
ed25519-dalek = { default-features = false, optional = true, version = "=3.0.0-pre.5" }
rmp-serde = { default-features = false, optional = true, version = "1.0" }
rust_decimal = { default-features = false, features = ["maths"], optional = true, version = "1.0" }
serde = { default-features = false, features = ["alloc", "derive"], optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
tokio-rustls = { default-features = false, optional = true, version = "0.26" }
wtx = { default-features = false, features = ["client-api-framework", "macros", "serde", "web-socket"], version = "0.41" }

crypto-bigint = { default-features = false, optional = true, features = ["serde"], version = "=0.7.0-rc.18" }
k256 = { default-features = false, features = ["ecdsa", "serde"], optional = true, version = "=0.14.0-rc.4" }
sha3 = { default-features = false, optional = true, version = "=0.11.0-rc.3" }
signature = { default-features = false, optional = true, version = "=3.0.0-rc.6" }

[dev-dependencies]
rust_decimal_macros = { default-features = false, version = "1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
wtx = { default-features = false, features = ["client-api-framework", "http-client-pool", "serde_json", "tokio", "tokio-rustls", "_tracing-tree", "webpki-roots", "web-socket-handshake"], version = "0.41" }

[features]
default = []
ethereum = ["crypto-bigint", "serde", "sha3"]
hyperliquid = ["ethereum", "k256", "rmp-serde", "rust_decimal/serde", "serde_json", "signature"]
mercado-pago = ["serde", "serde_json", "rust_decimal/serde-with-float", "rust_decimal/serde-with-str", "wtx/serde_json"]
olist = ["rust_decimal/serde-with-str", "wtx/serde_urlencoded"]
pagar-me = ["base64", "wtx/serde"]
solana = ["base64", "bincode", "bs58", "ed25519-dalek", "serde", "signature", "wtx/std"]
std = []
super-frete = ["rust_decimal/serde-with-float", "rust_decimal/serde-with-str"]
vault = []

_integration-tests = ["std"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[package]
categories = ["asynchronous", "data-structures", "encoding", "network-programming", "no-std"]
description = "A set of API collections based on the wtx framework"
edition = "2024"
keywords = ["api", "client", "io", "network", "serialization"]
license = "Apache-2.0"
name = "wtx-apis"
readme = "README.md"
repository = "https://github.com/c410-f3r/wtx-apis"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
